@@ -1,3 +1,6 @@
+4690.	[bug]		Command line options -4/-6 were handled inconsistently
+			between tools. [RT #45632]
+
 4689.	[cleanup]	Turn on minimal responses for CDNSKEY and CDS in
 			addition to DNSKEY and DS. Thanks to Tony Finch.
 			[RT #45690]
